--- a/src/app/modules/characters/pages/characters/characters.component.html
+++ b/src/app/modules/characters/pages/characters/characters.component.html
@@ -1,1 +1,1 @@
-<simple-card [data]="characters$ | async"></simple-card>
+<span *ngIf="loading$ | async">Loading...</span> <simple-card></simple-card>
