--- a/src/app/shared/components/cards/simple-card/simple-card.component.html
+++ b/src/app/shared/components/cards/simple-card/simple-card.component.html
@@ -1,24 +1,37 @@
 <div class="simple-card__container">
-    <ng-container *ngIf="!data?.characters; else charactersFromAnEpisode">
-        <div class="simple-card__card" *ngFor="let character of data; trackBy: trackByFn">
-            <div class="simple-card__box">
-                <div class="simple-card__content">
-                    <h2>{{character?.id}}</h2>
-                    <h3>{{character?.name}}</h3>
-                    <a routerLink="{{character?.id}}">Read More</a>
-                </div>
-            </div>
+  <ng-container
+    *ngIf="!(loaded$ | async).results?.characters; else charactersFromAnEpisode"
+  >
+    <div
+      class="simple-card__card"
+      *ngFor="let character of (loaded$ | async).results; trackBy: trackByFn"
+    >
+      <div class="simple-card__box">
+        <div class="simple-card__content">
+          <h2>{{ character?.id }}</h2>
+          <h3>{{ character?.name }}</h3>
+          <a routerLink="{{ character?.id }}">Read More</a>
         </div>
-    </ng-container>
-    <ng-template #charactersFromAnEpisode>
-        <div class="simple-card__card" *ngFor="let character of data.characters; trackBy: trackByFn">
-            <div class="simple-card__box">
-                <div class="simple-card__content">
-                    <h2>{{character?.id}}</h2>
-                    <h3>{{character?.name}}</h3>
-                    <a (click)="navigateToSpecificCharacterOfAnEpisode(character)">Read More</a>
-                </div>
-            </div>
+      </div>
+    </div>
+  </ng-container>
+  <ng-template #charactersFromAnEpisode>
+    <div
+      class="simple-card__card"
+      *ngFor="
+        let character of (loaded$ | async).results.characters;
+        trackBy: trackByFn
+      "
+    >
+      <div class="simple-card__box">
+        <div class="simple-card__content">
+          <h2>{{ character?.id }}</h2>
+          <h3>{{ character?.name }}</h3>
+          <a (click)="navigateToSpecificCharacterOfAnEpisode(character)"
+            >Read More</a
+          >
         </div>
-    </ng-template>
+      </div>
+    </div>
+  </ng-template>
 </div>
