--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,19 +1,22 @@
 <header class="navbar">
-    <div>
-        <img class="navbar__image" src="assets/images/logo-navbar.png" alt="logo">
-    </div>
-    <nav>
-        <ul class="navbar__nav-links">
-            <li>
-                <a routerLink="/episodes" >Episodes</a>
-            </li>
-            <li>
-                <a routerLink="/characters">Characters</a>
-            </li>
-            <li>
-                <a routerLink="/locations">Locations</a>
-            </li>
-        </ul>
-    </nav>
-    <a routerLink="" class="navbar__btn">Contact</a>
+  <div>
+    <img class="navbar__image" src="assets/images/logo-navbar.png" alt="logo" />
+  </div>
+  <nav>
+    <ul class="navbar__nav-links">
+      <li>
+        <a routerLink="/episodes">Episodes</a>
+      </li>
+      <li>
+        <a routerLink="/characters">Characters</a>
+      </li>
+      <li>
+        <a routerLink="/locations">Locations</a>
+      </li>
+      <li>
+        <a routerLink="/crud">Crud</a>
+      </li>
+    </ul>
+  </nav>
+  <a routerLink="" class="navbar__btn">Contact</a>
 </header>
