--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @use "@angular/material" as mat;
 @include mat.core();
+/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 $project-primary: mat.define-palette(mat.$indigo-palette);
 $project-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
