first part formarray

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -16,6 +16,9 @@
       <li>
         <a routerLink="/crud">Crud</a>
       </li>
+      <li>
+        <a routerLink="/dynamic-form">Dynamic Form</a>
+      </li>
     </ul>
   </nav>
   <a routerLink="" class="navbar__btn">Contact</a>
