--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+button:disabled {
+  background-color: #97929248;
+  cursor: not-allowed;
+}
