--- a/src/app/modules/dynamic-form/dynamic-form.component.html
+++ b/src/app/modules/dynamic-form/dynamic-form.component.html
@@ -1,7 +1,7 @@
 <div class="float-right w-18 m-2">
   <button
     type="button"
-    (click)="addItem($event)"
+    (click)="addItem()"
     class="inline-flex hover:shadow-form rounded-md bg-[#1106df] py-3 px-8 text-center text-base font-semibold text-white outline-none"
   >
     Add Product
@@ -10,7 +10,7 @@
   <button
     type="button"
     class="inline-flex ml-2 hover:shadow-form rounded-md bg-[#0fd05c] py-3 px-8 text-center text-base font-semibold text-white outline-none"
-    (click)="submitForm(orderForm.value)"
+    (click)="submitForm(form.value)"
   >
     Save
   </button>
@@ -19,8 +19,8 @@
 <div class="inline-flex items-center justify-center m-2 p-2">
   <form
     class="inline-flex"
-    [formGroup]="orderForm"
-    (ngSubmit)="submitForm(orderForm.value)"
+    [formGroup]="form"
+    (ngSubmit)="submitForm(form.value)"
   >
     <div
       class="mx-auto w-full max-w-[550px] border-solid border-2 p-2 ml-2"
@@ -28,9 +28,9 @@
       *ngFor="let item of arrayFormData.controls; let i = index; let c = count"
     >
       <button
-        [disabled]="!(orderForm.get('items')?.value.length > 1)"
+        [disabled]="!(form.get('items')?.value.length > 1)"
         class="bg-gradient-to-tr mb-2 float-right bg-red-600 w-6 h-6 rounded-full shadow-2xl shadow-red-400 border-white border-dashed border-2 flex justify-center items-center"
-        (click)="deleteItemLine($event, i)"
+        (click)="deleteItemLine(i)"
       >
         <div>
           <h1 class="text-white text-2xl">X</h1>
