improvement async pipe

--- a/src/app/modules/crud/crud.component.html
+++ b/src/app/modules/crud/crud.component.html
@@ -55,7 +55,7 @@
   </form>
 </div>
 
-<ng-container *ngIf="products$ | async">
+<ng-container *ngIf="products$ | async as products">
   <div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
     <table
       class="w-full border-collapse bg-white text-left text-sm text-gray-500"
@@ -73,7 +73,7 @@
       <tbody class="divide-y divide-gray-100 border-t border-gray-100">
         <tr
           class="hover:bg-gray-50"
-          *ngFor="let product of products$ | async; trackBy: trackByFn"
+          *ngFor="let product of products; trackBy: trackByFn"
         >
           <th class="flex gap-3 px-6 py-4 font-normal text-gray-900">
             <div class="relative h-10 w-10">
