--- a/src/app/modules/infinite-scroll/infinite-scroll.component.scss
+++ b/src/app/modules/infinite-scroll/infinite-scroll.component.scss
@@ -1,3 +1,10 @@
-cdk-virtual-scroll-viewport {
-  min-height: 100%;
+.mat-card {
+  margin: 10px !important;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.img-container {
+  float: left;
+  padding-right: 10px;
 }
