--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -22,6 +22,9 @@
       <li>
         <a routerLink="/infinite-scroll">Infinite Scroll</a>
       </li>
+      <li>
+        <a routerLink="/rxjs">RxJs</a>
+      </li>
     </ul>
   </nav>
   <a routerLink="" class="navbar__btn">Contact</a>
