--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,6 @@
-@use "@angular/material" as mat;
-@include mat.core();
-/* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-$project-primary: mat.define-palette(mat.$indigo-palette);
-$project-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$project-warn: mat.define-palette(mat.$red-palette);
-$project-theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $project-primary,
-      accent: $project-accent,
-      warn: $project-warn,
-    ),
-  )
-);
-
-@include mat.all-component-themes($project-theme);
 
 @font-face {
   font-family: Shlop;
@@ -29,12 +11,21 @@ $project-theme: mat.define-light-theme(
   font-family: Shlop;
 }
 
+@font-face {
+  font-family: JetBrainsMono;
+  src: url(assets/fonts/JetBrainsMono-Medium.ttf) format("truetype");
+}
+
+.JetBrainsMono {
+  font-family: JetBrainsMono;
+}
+
 * {
   box-sizing: borde-box;
   margin: 0;
   padding: 0;
-  font-family: Shlop;
-  font-size: 20px;
+  font-family: JetBrainsMono;
+  font-size: 12px;
 }
 
 body {
