--- a/src/app/modules/rxjs/rxjs.component.html
+++ b/src/app/modules/rxjs/rxjs.component.html
@@ -6,10 +6,8 @@
 
     <input
       class="inline-block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-      #input
       type="text"
-      matInput
-      [formControl]="searchPokemon"
+      [(ngModel)]="searchPokemon"
       placeholder="Search..."
     />
   </div>
@@ -36,7 +34,7 @@
 <ng-container *ngIf="pokemons$ | async as pokemons">
   <div
     class="w-[32rem] inline-flex flex-nowrap items-end shadow-lg m-2"
-    *ngFor="let pokemon of pokemons"
+    *ngFor="let pokemon of pokemons | filterPokemon : searchPokemon"
   >
     <img [src]="pokemon.image" alt="{{ pokemon.name }}" />
     <div class="px-6 py-4">
