--- a/src/app/modules/infinite-scroll/infinite-scroll.component.scss
+++ b/src/app/modules/infinite-scroll/infinite-scroll.component.scss
@@ -1,10 +1,23 @@
-.mat-card {
-  margin: 10px !important;
-  max-height: 200px;
-  overflow-y: auto;
+h1 {
+  margin: 2em;
+  font-size: xx-large;
+}
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  margin: 2em;
+  align-content: space-between;
 }
 
-.img-container {
-  float: left;
-  padding-right: 10px;
+mat-card {
+  margin: 1em;
+  background-color: #fff;
+}
+
+mat-card-subtitle {
+  color: #000;
+}
+
+body {
+  overflow-y: scroll;
 }
