--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,65 +1,41 @@
-header.navbar {
-    background-color: #1b3039;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 85px;
-    padding: 5px 10%;
+.container-flex {
+  display: flex;
+  flex-direction: column;
 }
 
-img.navbar__image {
-    height: 110px;
-    width: auto;
-    cursor: pointer;
-    transition: all 0.3s;
+header {
+  display: flex;
+  background-color: #394183;
 }
 
-img.navbar__image:hover {
-    transform: scale(1.2);
+.imageHeaderDiv {
+  padding: 1em;
+
+  img {
+    height: 34px;
+  }
 }
 
-ul.navbar__nav-links {
-    list-style: none;
+.navHeaderDiv {
+  padding: 1em;
+  li {
+    display: inline-flex;
+  }
+
+  li a {
+    border-radius: 0.5em;
+    color: #fff;
+    margin-right: 0.5em;
+    padding: 0.5em;
+  }
+
+  li a:hover {
+    color: #416aac;
+    background-color: #e6de83;
+  }
 }
 
-ul.navbar__nav-links li {
-    display: inline-block;
-    padding: 0 20px;
+.active {
+  color: #416aac;
+  background-color: #83a8e6;
 }
-
-ul.navbar__nav-links li:hover {
-    transform: scale(1.1);
-}
-
-ul.navbar__nav-links li a {
-    font-size: 700;
-    color: #eceff1;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-ul.navbar__nav-links li a:hover {
-    color: #ffbc0e;
-}
-
-a.navbar__btn {
-    font-weight: 700;
-    color: #1b3039;
-    padding: 9px 25px;
-    background: #eceff1;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-a.navbar__btn:hover {
-    background-color: #e2f1f8;
-    color: #ffbc0e;
-    transform: scale(1.1);
-}
-
-
-
-
-
