--- a/src/app/modules/infinite-scroll/infinite-scroll.component.html
+++ b/src/app/modules/infinite-scroll/infinite-scroll.component.html
@@ -1,4 +1,3 @@
-<h1>Loading data scrolling</h1>
 <div
   infinite-scroll
   [infiniteScrollDistance]="2"
@@ -6,19 +5,30 @@
   (scrolled)="onScroll()"
   class="flex-container"
 >
-  <mat-card *ngFor="let cat of cats">
-    <mat-card-header>
-      <div>
-        <mat-card-title>{{ cat.name }}</mat-card-title>
-        <mat-card-subtitle
-          >Temperament: {{ cat.temperament }}</mat-card-subtitle
-        >
-      </div>
-    </mat-card-header>
-    <mat-card-content>
-      <div>
-        <span>{{ cat.description }}</span>
-      </div>
-    </mat-card-content>
-  </mat-card>
+  <div>
+    <button
+      type="button"
+      class="inline-flex ml-2 hover:shadow-form rounded-md bg-[#0fd05c] py-3 px-8 text-center text-base font-semibold text-white outline-none"
+      (click)="onScroll()"
+    >
+      See more
+    </button>
+  </div>
+  <div>
+    <mat-card *ngFor="let cat of cats">
+      <mat-card-header>
+        <div>
+          <mat-card-title>{{ cat.name }}</mat-card-title>
+          <mat-card-subtitle
+            >Temperament: {{ cat.temperament }}</mat-card-subtitle
+          >
+        </div>
+      </mat-card-header>
+      <mat-card-content>
+        <div>
+          <span>{{ cat.description }}</span>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
