--- a/src/app/modules/rxjs/rxjs.component.html
+++ b/src/app/modules/rxjs/rxjs.component.html
@@ -1,38 +1,39 @@
-<div class="flex flex-col">
-  <div class="m-5">
-    <div class="inline-block mr-2">
-      <label for="searchPokemon" class="form-label inline-block mr-2"
-        >Name or number</label
-      >
-      <input
-        class="inline-block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-        type="text"
-        [(ngModel)]="searchPokemon"
-        placeholder="Search..."
-      />
+<ng-container *ngIf="pokemons$ | async as pokemons">
+  <div class="flex flex-col">
+    <div class="m-5">
+      <div class="inline-block mr-2">
+        <label for="searchPokemon" class="form-label inline-block mr-2"
+          >Name or number</label
+        >
+        <input
+          class="inline-block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          type="text"
+          [(ngModel)]="searchPokemon"
+          placeholder="Search..."
+        />
+      </div>
+      <div class="inline-block mr-2">
+        <span>Sort by: </span>
+      </div>
+      <div class="inline-block">
+        <label
+          for="countries_disabled"
+          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+          >Select an option</label
+        >
+        <select
+          (change)="sortBy($event)"
+          class="inline-flex w-[20rem] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        >
+          <option selected value="lowestOrderFirst">
+            Lowest number (First)
+          </option>
+          <option value="highestOrderFirst">Latest number (Last)</option>
+          <option value="AtoZ">A-Z</option>
+          <option value="ZtoA">Z-A</option>
+        </select>
+      </div>
     </div>
-    <div class="inline-block mr-2">
-      <span>Sort by: </span>
-    </div>
-    <div class="inline-block">
-      <label
-        for="countries_disabled"
-        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-        >Select an option</label
-      >
-      <select
-        (change)="sortBy($event)"
-        class="inline-flex w-[20rem] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      >
-        <option selected value="lowestOrderFirst">Lowest number (First)</option>
-        <option value="highestOrderFirst">Latest number (Last)</option>
-        <option value="AtoZ">A-Z</option>
-        <option value="ZtoA">Z-A</option>
-      </select>
-    </div>
-  </div>
-
-  <ng-container *ngIf="pokemons$ | async as pokemons">
     <div class="m-3 flex-wrap inline-flex">
       <div
         class="items-end shadow-lg m-2"
@@ -57,5 +58,5 @@
         </div>
       </div>
     </div>
-  </ng-container>
-</div>
+  </div>
+</ng-container>
