--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -62,6 +62,22 @@
               >RxJs</a
             >
           </li>
+          <li>
+            <a
+              routerLink="/flex-box"
+              routerLinkActive="active"
+              [routerLink]="['/flex-box']"
+              >Flexbox</a
+            >
+          </li>
+          <li>
+            <a
+              routerLink="/rxjs-operators"
+              routerLinkActive="active"
+              [routerLink]="['/rxjs-operators']"
+              >RxJs Operators</a
+            >
+          </li>
         </ul>
       </nav>
     </div>
