--- a/src/app/modules/flex-box/flex-box.component.html
+++ b/src/app/modules/flex-box/flex-box.component.html
@@ -1,41 +1,78 @@
-<div class="flex-container">
-  <div
-    style="
-      order: 1;
-      flex-grow: 1;
-      flex-shrink: 0;
-      background-color: rgb(255, 0, 111);
-    "
-  >
-    1
+<div class="header">
+  <div class="imageHeader">
+    <img src="assets/images/pokemon.png" alt="logo" />
   </div>
-  <div style="order: 3; flex-grow: 1; background-color: rgb(255, 153, 0)">
-    2
-  </div>
-  <div style="order: 2; flex-grow: 1; background-color: rgb(148, 148, 164)">
-    3
-  </div>
-  <div style="order: 5; flex-grow: 1; background-color: rgb(0, 255, 162)">
-    4
-  </div>
-  <div
-    style="
-      order: 4;
-      flex-grow: 1;
-      flex-basis: 400px;
-      background-color: rgb(19, 139, 139);
-    "
-  >
-    5
-  </div>
-  <div style="order: 6; flex-grow: 1; background-color: rgb(208, 169, 28)">
-    6
-  </div>
-  <div style="order: 7; flex-grow: 5; background-color: rgb(81, 255, 0)">7</div>
-  <div style="order: 9; flex-grow: 1; background-color: rgb(43, 43, 189)">
-    8
-  </div>
-  <div style="order: 8; flex-grow: 5; background-color: rgb(255, 242, 0)">
-    9
+  <div class="navigator"></div>
+</div>
+<div class="content">
+  <div class="left"></div>
+  <div class="right">
+    <div class="text">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
+        voluptatem odit id voluptates accusantium, ipsa repellendus distinctio
+        eum dolores, qui velit cupiditate tempore et provident itaque officia
+        expedita laboriosam omnis! Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Beatae quia ut, quisquam, numquam atque aliquid
+        ratione debitis non nostrum, praesentium distinctio exercitationem totam
+        laboriosam minima nesciunt repellat consectetur tempora sequi. Lorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Earum optio placeat
+        laborum fugiat. Similique ipsa expedita cupiditate suscipit officiis sit
+        odit delectus aut perspiciatis, unde a consequuntur ad itaque
+        distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Sequi similique inventore sit placeat, omnis tempore natus eius adipisci
+        commodi, alias corporis, reiciendis nemo! Odit obcaecati perspiciatis
+        et? Debitis, reiciendis beatae. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Placeat natus vel dicta tenetur asperiores expedita
+        aliquam sed culpa ut quae labore, consequuntur deserunt suscipit
+        corporis perspiciatis atque debitis, cumque iure? Lorem ipsum dolor sit
+        amet consectetur adipisicing elit. Corporis neque quaerat, quia hic ex
+        odit culpa eaque, deleniti perspiciatis suscipit repellat! Doloremque
+        totam reprehenderit accusamus nihil fuga, odio exercitationem eveniet.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos placeat
+        et sint cum? Quam debitis inventore dolores odio eum error quas ipsa
+        quidem necessitatibus exercitationem ratione veniam, suscipit sunt odit.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores neque,
+        culpa rem odit, ab earum similique quisquam illum repellat nobis fugiat
+        totam a veniam enim minima omnis ea illo hic! Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. In eligendi quia incidunt accusamus eius
+        vel laboriosam tempora deserunt eaque fugit. Reiciendis tempora ab
+        consequatur, ipsa beatae temporibus earum voluptatum tempore? Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Nihil itaque numquam
+        repellat perspiciatis esse, consequuntur at asperiores magni facere
+        atque, neque fugit modi est inventore, saepe non doloremque eveniet ex!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+      </p>
+    </div>
+    <div class="content-small">
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+      <div class="small">
+        <img src="assets/images/episode.jpg" alt="prueba" />
+      </div>
+    </div>
   </div>
 </div>
+<div class="footer"></div>
