--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container-flex">
+<div class="container-flex" *ngIf="auth.user$ | async as user">
   <header>
     <div class="imageHeaderDiv">
       <img src="assets/images/pokemon.png" alt="logo" />
@@ -83,3 +83,27 @@
     </div>
   </header>
 </div>
+
+<ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+  <button
+    class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out w-full"
+    (click)="
+      auth.logout({ logoutParams: { returnTo: document.location.origin } })
+    "
+  >
+    Log out
+  </button>
+</ng-container>
+
+<ng-template #loggedOut>
+  <button
+    class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out w-full"
+    (click)="auth.loginWithRedirect()"
+  >
+    Log in
+  </button>
+</ng-template>
+
+<pre *ngIf="auth.user$ | async as user">
+  <code>{{ user | json }}</code>
+</pre>
