--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <app-auth-button></app-auth-button> -->
-<navbar></navbar>
-<app-loader></app-loader>
-
-<router-outlet></router-outlet>
+<div id="main-container" [ngClass]="[setMode ? 'darkTheme' : 'lightTheme']">
+  <navbar (mode)="receiveMode($event)"></navbar>
+  <app-loader></app-loader>
+  <router-outlet></router-outlet>
+</div>
