--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
-<div class="container-flex" *ngIf="auth.user$ | async as user">
+<div class="container-flex">
   <header>
     <div class="imageHeaderDiv">
       <img src="assets/images/pokemon.png" alt="logo" />
     </div>
     <div class="navHeaderDiv">
-      <nav>
+      <nav *ngIf="auth.user$ | async as user">
         <ul>
           <li>
             <a
@@ -78,22 +78,29 @@
               >RxJs Operators</a
             >
           </li>
+          <button
+            class="inline-block mr-2 px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out w-auto"
+            (click)="onChangeToggle()"
+          >
+            Toggle Theme
+          </button>
+          <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+            <button
+              class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out w-auto"
+              (click)="
+                auth.logout({
+                  logoutParams: { returnTo: document.location.origin }
+                })
+              "
+            >
+              Log out
+            </button>
+          </ng-container>
         </ul>
       </nav>
     </div>
   </header>
 </div>
-
-<ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
-  <button
-    class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out w-full"
-    (click)="
-      auth.logout({ logoutParams: { returnTo: document.location.origin } })
-    "
-  >
-    Log out
-  </button>
-</ng-container>
 
 <ng-template #loggedOut>
   <button
@@ -104,6 +111,6 @@
   </button>
 </ng-template>
 
-<pre *ngIf="auth.user$ | async as user">
+<!-- <pre *ngIf="auth.user$ | async as user">
   <code>{{ user | json }}</code>
-</pre>
+</pre> -->
