--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -24,14 +24,14 @@ header {
 
   li a {
     border-radius: 0.5em;
-    color: #fff;
+    color: #fff !important;
     margin-right: 0.5em;
     padding: 0.5em;
   }
 
   li a:hover {
     color: #416aac;
-    background-color: #e6de83;
+    background-color: #727de0;
   }
 }
 
